# prompt

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml  publish.yml
src/: main.rs
