[package]
name = "prompt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "2.2.3"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
homedir = "0.2.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "time"] }
